--- a/sonarr-radarr-jackett/nginx_tracker.conf
+++ b/sonarr-radarr-jackett/nginx_tracker.conf
@@ -1,15 +1,21 @@
  http {
+     upstream radarr{
+         server radarr:7878
+     }
    server {
+
      listen 9000;
      location /radarr {
        proxy_pass http://radarr:7878;
      }
-     location /sonarr {
-        proxy_pass http://sonarr:8989;
+     server {
+         listen     80;
+         server_name    radarr.starbase.local;
+         location / {
+             proxy_pass http://radarr
+         }
      }
-     location /jackett {
-         proxy_pass http://jackett:9117;
-     }
+     
      
    }
  }
