--- a/configs/nginx_tracker.conf
+++ b/configs/nginx_tracker.conf
@@ -1,39 +1,35 @@
+events {
+    worker_connections 1024;
+}
  http {
-     upstream radarr {
-         server radarr:7878;
-     }
-     upstream app {
-       server app:9999;
-     }
-     upstream sonarr {
-       server sonarr:8989;
-     }
-     upstream jackett {
-       server jacket:9117;
-     }
-   server {
-     listen 8000;
-     location /radarr {
-       proxy_pass http://radarr:7878;
-     }
      server {
          listen     80;
-         server_name    starbase.local;
+
          location / {
              proxy_pass http://app:9999;
          }
-         location /radarr {
-           proxy_pass http://radarr:7878;
-         }
-         location /sonarr {
-           proxy_pass http://sonarr:8989;
-         }
-         location /jackett {
-           proxy_pass http://jacket:9117;
-         }        
-     }
+     }        
      
+     server {
+      listen 80;
+      server_name radarr.starbase.local;
+      location / { 
+        proxy_pass http://radarr:7878; 
+    }
+     } 
+    server { listen 80;
+      server_name jackett.starbase.local;
+
+    location / { proxy_pass http://jackett:8989; 
+      } 
+    }
+    server { listen 80;
+      server_name sonarr.starbase.local;
+
+    location / { proxy_pass http://sonarr:8989; 
+      } 
+    }    
      
    }
- }
+ 
 
