--- a/sonarr-radarr-jackett/.env
+++ b/sonarr-radarr-jackett/.env
@@ -1,1 +1,10 @@
-../configs/.env
+MEDIA_SERVER_ROOT=/opt/remotefs/media_server
+NGINX_CONFIG=/opt/remotefs/shared_storage/nginx/nginx.conf
+TRACKER_NGINX_CONFIG=/opt/remotefs/shared_storage/nginx/nginx_tracker.conf
+WEB_ROOT=/opt/remotefs/shared_storage/http
+VPN_CONFIG=/opt/remotefs/shared_storage/wireguard
+# Your timezone, https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+TZ=America/Denver
+# UNIX PUID and PGID, find with: id $USER
+PUID=1000
+PGID=100
