--- a/transmission-wireguard/.env
+++ b/transmission-wireguard/.env
@@ -1,6 +1,7 @@
 MEDIA_SERVER_ROOT=/media/bulk/media_server
 NGINX_CONFIG=/opt/remotefs/shared_storage/nginx/nginx.conf
 TRACKER_NGINX_CONFIG=/opt/remotefs/shared_storage/nginx/nginx_tracker.conf
+NGINX_CONFIG_DE=/opt/remotefs/shared_storage/nginx/nginx_dg.conf
 WEB_ROOT=/opt/remotefs/shared_storage/http
 VPN_CONFIG=/opt/remotefs/shared_storage/wireguard
 # Your timezone, https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
